# FlashMoE

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  playground.ipynb  playground.py  pyproject.toml  quickstart.py  setup.py  test.py  test_flashmoe.py
csrc/: CMakeLists.txt  aristos.cuh  aristos_config.json  aristos_config.schema.json  bench.cuh  correctness.cuh  eval.cuh  flashmoe_config.schema.json  kleos_config.json  main.cu  moe.cuh  packet.cuh  python_bindings.cu  queue.cuh
csrc/benchmarks/: cdx_gemm.cuh  common.cuh  flash_bench.cu  gate_bench.cu  gate_bench_seq_emb.cu  gemm_bench.cu  playground.cu  v0_gemm.cuh
csrc/cmake/: sm.cu
csrc/correctness/: correctness.cuh  eval.cuh
csrc/include/: arch.cuh  aristos.cuh  atomics.cuh  bootstrap.cuh  config.cuh  debug.cuh  indexing.cuh  kleos.cuh  prep.cuh  telemetry.cuh  throughput.cuh  topo.cuh  types.cuh
csrc/include/algorithm/: algorithm.cuh
csrc/include/communication/: communicator.cuh  doorbell.cuh  packet.cuh  queue.cuh
csrc/include/definition/: memory_layout.cuh  platform.cuh  tensor.cuh  types.cuh
csrc/include/engine/: scheduler.cuh  subscriber.cuh
csrc/include/engine/decider/comps/: args.cuh  edge.cuh  functions.cuh  worker.cuh
csrc/include/engine/processor/: gemm.cuh  mmaConfig.cuh  processor.cuh
csrc/include/flashmoe/: arch.cuh  atomics.cuh  bitset.cuh  bootstrap.cuh  checks.cuh  combine.cuh  context.cuh  debug.cuh  dispatch.cuh  dq.cuh  flashmoe.cuh  gate.cuh  heap.cuh  indexing.cuh  moe.cuh  os.cuh  packed.cuh  processor.cuh  rvt.cuh  scheduler.cuh  signal.cuh  structures.cuh  subscriber.cuh  task.cuh  throughput.cuh  tile.cuh  topo.cuh  types.cuh  vt.cuh
csrc/include/flashmoe/experimental/: topo.cuh
csrc/include/flashmoe/experimental/decider/: decider.cuh
csrc/include/flashmoe/experimental/decider/comps/: args.cuh  expert.cuh  functions.cuh  group.cuh
csrc/include/flashmoe/infra/: activation.cuh  atomics.cuh  bitset.cuh  constants.cuh  dq.cuh  heap.cuh  math.cuh  packed.cuh  rvt.cuh  signal.cuh  structures.cuh  task.cuh  telemetry.cuh  tq.cuh  vt.cuh
csrc/include/flashmoe/moe/: expert.cuh  fffn.cuh  gate.cuh  moe.cuh
csrc/include/flashmoe/os/: os.cuh  packet.cuh  scheduler.cuh  subscriber.cuh
csrc/include/flashmoe/os/decider/: decider.cuh
csrc/include/flashmoe/os/decider/comps/: edge.cuh  niche.cuh  worker.cuh
csrc/include/flashmoe/os/processor/: gemm.cuh  mmaConfig.cuh  processor.cuh
csrc/include/kleos/: arch.cuh  types.cuh
csrc/include/kleos/moe/: README.MD
csrc/include/kleos/os/processor/: gemm.cuh  mmaConfig.cuh  processor.cuh
csrc/include/moe/: README.MD  expert.cuh  fffn.cuh  gate.cuh  moe.cuh  packet.cuh
csrc/include/moe/algorithm/: algorithm.cuh
csrc/include/moe/communication/: communicator.cuh  packet.cuh
csrc/include/moe/compute/: compute.cuh
csrc/include/moe/definition/: memory_layout.cuh  platform.cuh  tensor.cuh  types.cuh  values.cuh
csrc/include/moe/engine/: processor.cuh  publisher.cuh  subscriber.cuh
csrc/include/moe/engine/decider/: decider.cuh
csrc/include/moe/engine/decider/comps/: args.cuh  edge.cuh  expert.cuh  functions.cuh  group.cuh  niche.cuh  worker.cuh
csrc/include/moe/engine/processor/: mmaConfig.cuh  processor.cuh
csrc/include/moe/topo/: topo.cuh
csrc/include/moe/util/: atomics.cuh  config.cuh  debug.cuh  indexing.cuh  nifty.cuh
csrc/include/os/: observer.cuh  os.cuh  packet.cuh  scheduler.cuh  subscriber.cuh  sync.cuh
csrc/include/os/decider/: decider.cuh
csrc/include/os/decider/comps/: args.cuh  edge.cuh  expert.cuh  functions.cuh  group.cuh  niche.cuh  worker.cuh
csrc/include/os/processor/: gemm.cuh  mmaConfig.cuh  processor.cuh
csrc/include/topo/: topo.cuh
csrc/include/util/: atomics.cuh  debug.cuh  indexing.cuh  platform.cuh
csrc/tests/: combine.cu  common.cuh  debug.cuh  flashmoe.cu  gate.cu  gatedGEMM.cu  gemm.cu  gemmMNK.cu  playground.cu  scheduler.cu
flashmoe/: CMakeLists.txt  __init__.py  bindings.py  cb.py  gate.py  jit.py  launcher.py  ops.py  router.py  util.py  worker.py
pysrc/: main.py  playground.ipynb
