[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashmoe"
version = "0.1.0"
description = "Completely Fused Distributed MoE"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "flashmoe"}

[tool.setuptools.package-data]
# IMPORTANT: include the headers in the package
flashmoe = [
  "csrc/cmake/CPM.cmake",
  "csrc/include/flashmoe/*"
]